# python_server/utils/types.py
@@ -1,0 +1,5 @@
+from pydantic import BaseModel
+
+
+class Processed_file_response(BaseModel):
+    public: str
